--- a/dune
+++ b/dune
@@ -1,5 +1,5 @@
 (executable
  (public_name oxcaml-simd-test)
  (name main)
- (libraries ocaml_simd_sse)
+ (libraries ocaml_simd)
  (ocamlopt_flags (:standard -O3 -dvectorize)))
